# -

D&D Кубики/: CMakeLists.txt  README.md  build.bat  build_ascii_path.bat  build_qt.bat  build_user_text.bat  check_qt.ps1  run_build.cmd  test_qt_build.bat  verify_qt.ps1  ЗАПУСК.bat  ЗАПУСК_ТЕКСТ.bat  ПРОВЕРКА.bat
D&D Кубики/.cursor/agents/: dnd-dice.md
D&D Кубики/DndDice/: BUILD.bat
D&D Кубики/build_qt/: CMakeCache.txt  Makefile  cmake_install.cmake
D&D Кубики/build_qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
D&D Кубики/deploy/.qt/: QtDeployTargets.cmake
D&D Кубики/deploy/DndDice_autogen/R3WADQZVW2/: moc_DieIconButton.cpp.d
D&D Кубики/resources/: style.qss
D&D Кубики/src/: DiceRoller.h  DieButton.cpp
D&D Кубики/src/qt/: DieIconButton.cpp
D&D Кубики/user_text/: CMakeLists.txt
D&D Кубики/user_text/src/: main.cpp
DndDice/: README.txt  build_log.txt
DndDice/deploy/: CMakeCache.txt  Makefile  cmake_install.cmake
DndDice/deploy/.qt/: QtDeploySupport.cmake
DndDice/deploy/DndDice_autogen/: deps  mocs_compilation.cpp
DndDice/deploy/DndDice_autogen/3YJK5W5UP7/: qrc_app.cpp
DndDice/deploy/DndDice_autogen/R3WADQZVW2/: moc_DieIconButton.cpp  moc_MainWindow.cpp  moc_MainWindow.cpp.d
DndDice/src/: DiceRoller.cpp  DieButton.h  DieDraw.cpp  DieDraw.h  Ui.cpp  Ui.h  main.cpp
DndDice/src/qt/: DieIconButton.h  MainWindow.cpp  MainWindow.h  main.cpp
